// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#toJSON converts XDR to JSON 1`] = `
Object {
  "authorize": true,
  "color": "green",
  "fee": 100,
  "lat": 37.7645352,
  "lon": -122.421069,
  "memo": Object {
    "_type": "memoText",
    "text": "hola",
  },
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
  "msg": "hello world",
  "offerId": "12345",
  "opaque": "AAAB",
  "price": Object {
    "d": 1,
    "n": 2,
  },
  "signedSequence": "-1059",
  "skipList": Array [
    "AAA=",
    "AAE=",
  ],
  "theVoid": undefined,
  "varOpaque": "AAE=",
  "varSkipList": Array [
    "AAA=",
    "AAE=",
    "AQE=",
  ],
  "version": -1,
}
`;

exports[`#toJSON option with value 1`] = `
Object {
  "meta": Object {
    "_type": "rejected",
    "rejected": 2,
  },
}
`;

exports[`#toJSON option without value 1`] = `
Object {
  "meta": Object {
    "_type": "rejected",
  },
}
`;

exports[`#toJSON union default arm 1`] = `
Object {
  "meta": Object {
    "_type": "pending",
  },
}
`;

exports[`#toJSON union with struct arm 1`] = `
Object {
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
}
`;

exports[`Integration serializes and deserializes a Stellar transaction result 1`] = `
Object {
  "ext": Object {
    "_type": undefined,
  },
  "feeCharged": "300",
  "result": Object {
    "_type": "txSuccess",
    "results": Array [
      Object {
        "_type": "opInner",
        "tr": Object {
          "_type": "createAccount",
          "createAccountResult": Object {
            "_type": "createAccountSuccess",
          },
        },
      },
      Object {
        "_type": "opInner",
        "tr": Object {
          "_type": "payment",
          "paymentResult": Object {
            "_type": "paymentSuccess",
          },
        },
      },
      Object {
        "_type": "opInner",
        "tr": Object {
          "_type": "setOption",
          "setOptionsResult": Object {
            "_type": "setOptionsSuccess",
          },
        },
      },
    ],
  },
}
`;
